Bug 285797 - knotify4 crased after start KDE4
Summary: knotify4 crased after start KDE4
Status: RESOLVED FIXED
Alias: None
Product: phonon-backend-vlc
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Harald Sitter
URL:
Keywords:
: 302985 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-05 08:19 UTC by Pavel N. Solovyov
Modified: 2012-07-04 00:22 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.6
Sentry Crash Report:


Attachments
Log after install: vlc-mini-debuginfo phonon-vlc-debuginfo kde4base-runtime-core-debuginfo (6.76 KB, text/plain)
2011-11-08 16:07 UTC, Pavel N. Solovyov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pavel N. Solovyov 2011-11-05 08:19:08 UTC
Application: knotify4 (4.0)
KDE Platform Version: 4.7.3 (4.7.3)
Qt Version: 4.7.4
Operating System: Linux 3.0.8-std-def-alt1 i686
Distribution: "ALT Linux 6.0.1 KDesktop  (Centaurea Sadleriana)"

-- Information about the crash:
- What I was doing when the application crashed:

Application: KNotify (knotify4), signal: Segmentation fault
[Current thread is 1 (Thread 0xb5755720 (LWP 8034))]

Thread 5 (Thread 0xb3f16b70 (LWP 8035)):
#0  0xb626dc11 in pthread_getspecific () from /lib/libpthread.so.0
#1  0xb5dbdcc5 in ?? () from /usr/lib/libgthread-2.0.so.0
#2  0xb601b1da in g_thread_self () from /lib/libglib-2.0.so.0
#3  0xb5feed82 in g_main_context_acquire () from /lib/libglib-2.0.so.0
#4  0xb5ff056e in ?? () from /lib/libglib-2.0.so.0
#5  0xb5ff0c68 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#6  0xb6973977 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#7  0xb69495c9 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#8  0xb6949872 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#9  0xb68650b2 in QThread::exec() () from /usr/lib/libQtCore.so.4
#10 0xb692f39b in ?? () from /usr/lib/libQtCore.so.4
#11 0xb68674d4 in ?? () from /usr/lib/libQtCore.so.4
#12 0xb6268940 in start_thread () from /lib/libpthread.so.0
#13 0xb66898ae in clone () from /lib/libc.so.6

Thread 4 (Thread 0xb2dffb70 (LWP 8037)):
#0  0xb667fafc in poll () from /lib/libc.so.6
#1  0xb600126b in g_poll () from /lib/libglib-2.0.so.0
#2  0xb5ff0967 in ?? () from /lib/libglib-2.0.so.0
#3  0xb5ff0c68 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#4  0xb6973977 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0xb69495c9 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0xb6949872 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#7  0xb68650b2 in QThread::exec() () from /usr/lib/libQtCore.so.4
#8  0xb686514d in QThread::run() () from /usr/lib/libQtCore.so.4
#9  0xb68674d4 in ?? () from /usr/lib/libQtCore.so.4
#10 0xb6268940 in start_thread () from /lib/libpthread.so.0
#11 0xb66898ae in clone () from /lib/libc.so.6

Thread 3 (Thread 0xb2301b70 (LWP 8069)):
#0  0xb626ce10 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0xb6696d6d in pthread_cond_wait () from /lib/libc.so.6
#2  0xb2444a63 in vlc_cond_wait () from /usr/lib/libvlccore.so.5
#3  0x0820231c in ?? ()
Backtrace stopped: previous frame inner to this frame (corrupt stack?)

Thread 2 (Thread 0xad43fb70 (LWP 8071)):
[KCrash Handler]
#6  0xb4233c90 in ?? () from /usr/lib/vlc/plugins/mmxext/libmemcpymmxext_plugin.so
#7  0xb626894e in start_thread () from /lib/libpthread.so.0
#8  0xb66898ae in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb5755720 (LWP 8034)):
#0  0xb6269959 in pthread_join () from /lib/libpthread.so.0
#1  0xb2444eb3 in vlc_join () from /usr/lib/libvlccore.so.5
#2  0x00000000 in ?? ()

The crash can be reproduced every time.

-- Backtrace:
Application: KNotify (knotify4), signal: Illegal instruction
[Current thread is 1 (Thread 0xb56b4720 (LWP 7124))]

Thread 5 (Thread 0xb3e94b70 (LWP 7125)):
#0  0xb65deafc in poll () from /lib/libc.so.6
#1  0xb5f6026b in g_poll () from /lib/libglib-2.0.so.0
#2  0xb5f4f967 in ?? () from /lib/libglib-2.0.so.0
#3  0xb5f4fc68 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#4  0xb68d2977 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0xb68a85c9 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0xb68a8872 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#7  0xb67c40b2 in QThread::exec() () from /usr/lib/libQtCore.so.4
#8  0xb688e39b in ?? () from /usr/lib/libQtCore.so.4
#9  0xb67c64d4 in ?? () from /usr/lib/libQtCore.so.4
#10 0xb61c7940 in start_thread () from /lib/libpthread.so.0
#11 0xb65e88ae in clone () from /lib/libc.so.6

Thread 4 (Thread 0xb2cffb70 (LWP 7127)):
#0  0xb5d15d56 in clock_gettime () from /lib/librt.so.1
#1  0xb6818318 in ?? () from /usr/lib/libQtCore.so.4
#2  0xb68d3962 in ?? () from /usr/lib/libQtCore.so.4
#3  0xb68d2182 in ?? () from /usr/lib/libQtCore.so.4
#4  0xb68d2215 in ?? () from /usr/lib/libQtCore.so.4
#5  0xb5f4e7de in g_main_context_prepare () from /lib/libglib-2.0.so.0
#6  0xb5f4f5fb in ?? () from /lib/libglib-2.0.so.0
#7  0xb5f4fc68 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#8  0xb68d2977 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#9  0xb68a85c9 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#10 0xb68a8872 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#11 0xb67c40b2 in QThread::exec() () from /usr/lib/libQtCore.so.4
#12 0xb67c414d in QThread::run() () from /usr/lib/libQtCore.so.4
#13 0xb67c64d4 in ?? () from /usr/lib/libQtCore.so.4
#14 0xb61c7940 in start_thread () from /lib/libpthread.so.0
#15 0xb65e88ae in clone () from /lib/libc.so.6

Thread 3 (Thread 0xb225fb70 (LWP 7538)):
#0  0xb61cbe10 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0xb65f5d6d in pthread_cond_wait () from /lib/libc.so.6
#2  0xb23aea63 in vlc_cond_wait () from /usr/lib/libvlccore.so.5
#3  0x082ab15c in ?? ()
Backtrace stopped: previous frame inner to this frame (corrupt stack?)

Thread 2 (Thread 0xb0138b70 (LWP 7540)):
[KCrash Handler]
#6  0xb23f8ee0 in ?? ()
#7  0xb61c794e in start_thread () from /lib/libpthread.so.0
#8  0xb65e88ae in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb56b4720 (LWP 7124)):
#0  0xb61c8959 in pthread_join () from /lib/libpthread.so.0
#1  0xb23aeeb3 in vlc_join () from /usr/lib/libvlccore.so.5
#2  0x00000000 in ?? ()

Possible duplicates by query: bug 285751, bug 285723, bug 285711, bug 285710, bug 285693.

Reported using DrKonqi
Comment 1 Myriam Schweingruber 2011-11-07 16:57:49 UTC
Could you please install debugging symbols for phonon and the phonon-backend-vlc and provide a better backtrace?
Comment 2 Pavel N. Solovyov 2011-11-08 16:07:41 UTC
Created attachment 65398 [details]
Log after install: vlc-mini-debuginfo phonon-vlc-debuginfo kde4base-runtime-core-debuginfo

Log after install: vlc-mini-debuginfo phonon-vlc-debuginfo kde4base-runtime-core-debuginfo
Comment 3 Myriam Schweingruber 2011-11-08 18:41:05 UTC
Backtrace from attachment:

Application: KNotify (knotify4), signal: Illegal instruction
89	    lll_wait_tid (pd->tid);
[Current thread is 1 (Thread 0xb5770720 (LWP 7244))]

...
Thread 2 (Thread 0xac1a1b70 (LWP 7664)):
[KCrash Handler]
#6  0xb24caee0 in ?? ()
#7  0xb628394e in start_thread (arg=0xac1a1b70) at pthread_create.c:304
#8  0xb66a48ae in clone () at
../sysdeps/unix/sysv/linux/i386/clone.S:130

There still are missing symbols for debugging, could you please install those through Dr. Konqi? Also, how many stars do you get for that backtrace in Dr.Konqi?
Comment 4 Harald Sitter 2012-06-18 04:03:19 UTC
Git commit 1b5079e65419a05dcbf34e30341a65d532ef8d78 by Harald Sitter.
Committed on 18/06/2012 at 06:03.
Pushed by sitter into branch 'master'.

don't stop the media_player explicitly when destroying the wrapper class

this is supposed to fix pointless crashes when cleaning up after XIOErrors
problem is that at this point vlc might go kaboom anyway, but not
explicitly stopping at least moves the crash into vlc getting the bug
reports off my yard :P
FIXED-IN: 0.6

M  +0    -4    src/mediaplayer.cpp

http://commits.kde.org/phonon-vlc/1b5079e65419a05dcbf34e30341a65d532ef8d78
Comment 5 Harald Sitter 2012-07-04 00:22:28 UTC
*** Bug 302985 has been marked as a duplicate of this bug. ***