don't stop the media_player explicitly when destroying the wrapper class

this is supposed to fix pointless crashes when cleaning up after XIOErrors
problem is that at this point vlc might go kaboom anyway, but not
explicitly stopping at least moves the crash into vlc getting the bug
reports off my yard :P

BUG: 285797
FIXED-IN: 0.6